Fix for right disabled icon in horizonal scrollbar

--- a/gtk-3.0/gtk.css
+++ b/gtk-3.0/gtk.css
@@ -448,7 +448,7 @@ scrollbar.horizontal button.up:disabled {
 }
 
 scrollbar.horizontal button.down:disabled {
-	-gtk-icon-source: url("../img/arrow-down-disabled.png");
+	-gtk-icon-source: url("../img/arrow-right-disabled.png");
 }
 
 scrollbar button:hover {
